# covariate_shift_KRR-Nystrom

./: README.md  pyproject.toml
notebook/: cov_shift.ipynb
scripts/: compare_models.py
src/covshift/: __init__.py  core.py  plot.py
src/covshift_correct.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
