[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covshift-correct"
version = "0.1.0"
description = "Minimal reproducible baseline for KRR under covariate shift (with IW and Nyström variants)."
authors = [{name="Andrea Della Vecchia"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
covshift-compare = "covshift.core:cli_compare"
